fixed overlapping text on events page

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4948,6 +4948,7 @@ border: 0;
 
         @include desktop-s {
             width:48vw;
+            padding-top:20vh;
         }
         
         .meta_info {
